【优化】重复api接口替换